--- a/.env
+++ b/.env
@@ -28,7 +28,7 @@ DB_DATABASE=my_laravel_db_dx51
 DB_USERNAME=my_laravel_db_dx51_user
 DB_PASSWORD=7tOfrtyghoELXFm31W6P4Ou8S01a060S
 
-SESSION_DRIVER=file
+SESSION_DRIVER=database
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
 SESSION_PATH=/
