--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ APP_ENV=local
 APP_KEY=base64:P8ElTGz+UtVoiUcGrbvm+0mX/Y3abxYu+mpBZqr9D/A=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
-APP_URL=http://localhost
+APP_URL=https://my-laravel-app-hjpc.onrender.com
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
