--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 APP_NAME=Laravel
-APP_ENV=local
+APP_ENV=production
 APP_KEY=base64:P8ElTGz+UtVoiUcGrbvm+0mX/Y3abxYu+mpBZqr9D/A=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
