--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 APP_NAME=Laravel
 APP_ENV=production
 APP_KEY=base64:P8ElTGz+UtVoiUcGrbvm+0mX/Y3abxYu+mpBZqr9D/A=
-APP_DEBUG=true
+APP_DEBUG=false
 APP_TIMEZONE=UTC
 APP_URL=https://my-laravel-app-hjpc.onrender.com
 
@@ -32,7 +32,7 @@ SESSION_DRIVER=database
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
 SESSION_PATH=/
-SESSION_DOMAIN=null
+SESSION_DOMAIN=my-laravel-app-hjpc.onrender.com
 
 BROADCAST_CONNECTION=log
 FILESYSTEM_DISK=local
