Hopefully fixed version

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 APP_NAME=Laravel
 APP_ENV=production
 APP_KEY=base64:P8ElTGz+UtVoiUcGrbvm+0mX/Y3abxYu+mpBZqr9D/A=
-APP_DEBUG=true
+APP_DEBUG=false
 APP_TIMEZONE=UTC
 APP_URL=https://my-laravel-app-hjpc.onrender.com
 
