--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ APP_ENV=production
 APP_KEY=base64:P8ElTGz+UtVoiUcGrbvm+0mX/Y3abxYu+mpBZqr9D/A=
 APP_DEBUG=false
 APP_TIMEZONE=UTC
-APP_URL=https://my-laravel-app-hjpc.onrender.com
+APP_URL=https://my-laravel-app-4q7m.onrender.com
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
