--- a/.env
+++ b/.env
@@ -32,7 +32,7 @@ SESSION_DRIVER=database
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
 SESSION_PATH=/
-SESSION_DOMAIN=https://my-laravel-app-4q7m.onrender.com
+SESSION_DOMAIN=.my-laravel-app-4q7m.onrender.com
 SESSION_SECURE_COOKIE=true
 SESSION_HTTP_ONLY=true
 SESSION_SAME_SITE=lax
